--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3-rc.0",
     "sequelize": "^6.9.0",
